[package]
name = "invoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
hmac = "0.12.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10.8"
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
